// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`branch statement Example 1 1`] = `
Object {
  "data": Object {
    "block": Array [
      Object {
        "data": Object {
          "expression": Object {
            "data": Object {
              "arguments": Array [
                Object {
                  "data": Object {
                    "expression": Object {
                      "data": Object {
                        "id": "0",
                        "identifier": Object {
                          "id": "0",
                          "isPlaceholder": false,
                          "string": "z",
                        },
                      },
                      "type": "identifierExpression",
                    },
                    "id": "0",
                    "label": "text",
                  },
                  "type": "argument",
                },
                Object {
                  "data": Object {
                    "id": "0",
                  },
                  "type": "placeholder",
                },
              ],
              "expression": Object {
                "data": Object {
                  "id": "0",
                  "identifier": Object {
                    "id": "0",
                    "isPlaceholder": false,
                    "string": "print",
                  },
                },
                "type": "identifierExpression",
              },
              "id": "0",
            },
            "type": "functionCallExpression",
          },
          "id": "0",
        },
        "type": "expression",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "condition": Object {
      "data": Object {
        "expression": Object {
          "data": Object {
            "arguments": Array [
              Object {
                "data": Object {
                  "expression": Object {
                    "data": Object {
                      "id": "0",
                      "identifier": Object {
                        "id": "0",
                        "isPlaceholder": false,
                        "string": "x",
                      },
                    },
                    "type": "identifierExpression",
                  },
                  "id": "0",
                  "label": "a",
                },
                "type": "argument",
              },
              Object {
                "data": Object {
                  "expression": Object {
                    "data": Object {
                      "id": "0",
                      "identifier": Object {
                        "id": "0",
                        "isPlaceholder": false,
                        "string": "y",
                      },
                    },
                    "type": "identifierExpression",
                  },
                  "id": "0",
                  "label": "b",
                },
                "type": "argument",
              },
              Object {
                "data": Object {
                  "id": "0",
                },
                "type": "placeholder",
              },
            ],
            "expression": Object {
              "data": Object {
                "expression": Object {
                  "data": Object {
                    "id": "0",
                    "identifier": Object {
                      "id": "0",
                      "isPlaceholder": false,
                      "string": "Boolean",
                    },
                  },
                  "type": "identifierExpression",
                },
                "id": "0",
                "memberName": Object {
                  "id": "0",
                  "isPlaceholder": false,
                  "string": "and",
                },
              },
              "type": "memberExpression",
            },
            "id": "0",
          },
          "type": "functionCallExpression",
        },
        "id": "0",
      },
      "type": "expressionCondition",
    },
    "id": "0",
  },
  "type": "branch",
}
`;

exports[`branch statement Example 2 1`] = `
Object {
  "data": Object {
    "block": Array [
      Object {
        "data": Object {
          "expression": Object {
            "data": Object {
              "arguments": Array [
                Object {
                  "data": Object {
                    "expression": Object {
                      "data": Object {
                        "id": "0",
                        "identifier": Object {
                          "id": "0",
                          "isPlaceholder": false,
                          "string": "z",
                        },
                      },
                      "type": "identifierExpression",
                    },
                    "id": "0",
                    "label": "text",
                  },
                  "type": "argument",
                },
                Object {
                  "data": Object {
                    "id": "0",
                  },
                  "type": "placeholder",
                },
              ],
              "expression": Object {
                "data": Object {
                  "id": "0",
                  "identifier": Object {
                    "id": "0",
                    "isPlaceholder": false,
                    "string": "print",
                  },
                },
                "type": "identifierExpression",
              },
              "id": "0",
            },
            "type": "functionCallExpression",
          },
          "id": "0",
        },
        "type": "expression",
      },
      Object {
        "data": Object {
          "id": "0",
        },
        "type": "placeholder",
      },
    ],
    "condition": Object {
      "data": Object {
        "id": "0",
        "initializer": Object {
          "data": Object {
            "id": "0",
            "identifier": Object {
              "id": "0",
              "isPlaceholder": false,
              "string": "wrapped",
            },
          },
          "type": "identifierExpression",
        },
        "pattern": Object {
          "associatedValues": Array [
            Object {
              "data": Object {
                "id": "0",
                "literal": Object {
                  "data": Object {
                    "id": "0",
                    "value": 42,
                  },
                  "type": "number",
                },
              },
              "type": "literalExpression",
            },
            Object {
              "data": Object {
                "id": "0",
              },
              "type": "placeholder",
            },
          ],
          "caseName": Object {
            "id": "0",
            "isPlaceholder": false,
            "string": "value",
          },
          "id": "0",
          "typeIdentifier": Object {
            "data": Object {
              "genericArguments": Array [
                Object {
                  "data": Object {
                    "genericArguments": Array [],
                    "id": "0",
                    "identifier": Object {
                      "id": "0",
                      "isPlaceholder": false,
                      "string": "Number",
                    },
                  },
                  "type": "typeIdentifier",
                },
              ],
              "id": "0",
              "identifier": Object {
                "id": "0",
                "isPlaceholder": false,
                "string": "Optional",
              },
            },
            "type": "typeIdentifier",
          },
        },
      },
      "type": "caseCondition",
    },
    "id": "0",
  },
  "type": "branch",
}
`;
